# auto-image

./: .gitignore  README.md  package.json  pyproject.toml  pytype.cfg  requirements.txt  score.py  score_blur.py  score_clip.py  score_exif_is_photo.py  score_html.py  score_manual.py  score_musiq.py  score_orb_response.py  score_vila.py  utils.py
casa-setup/: .gitignore  Magic Mirror Package Manager.yaml  Magic Mirror.yaml  README.md
casa-setup/mm/: test.sh
casa-setup/mm/config/: config.template.js
casa-setup/mm/mmpm-config/: MagicMirror-3rd-party-packages-db-last-update.json  MagicMirror-3rd-party-packages-db.json  mmpm-available-upgrades.json  mmpm-env.json
scripts/: check_imports.sh  check_style.sh  check_types.sh  deps_update.sh  poetry_run.sh  score_dropbox_base.sh
src/: config.py  geocode_manager.py  html_generator.py  organiser.py  result_manager.py  score_processor.py  server.py
src/static/: base.css  grid.css  grid.js  index.css  index.js  main.css  main.js  map.css  map.js  result.css  result.js
src/templates/: base.tpl  grid.tpl  group.tpl  index.tpl  map.tpl  processing.tpl  result.tpl
templates/: counts.tpl  groups.tpl  ocr.tpl  output.tpl  scores.tpl
