[project]
name = "Auto-Image"
version = "0.1.0"
description = "Automatically choose the top N interesting images from a set of images"
authors = [{ name = "Nicholas Lee", email = "csudcy@gmail.com" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    "jinja2>=3.1.4",
    "pillow>=11.0.0",
    "torch>=2.0.0, <2.3",
    "open_clip_torch>=2.29.0",
    "numpy<2",
    "opencv-python>=4.10.0.84",
    "requests>=2.32.3",
    "tesserocr>=2.7.1",
    "cachetools>=5.5.0",
    "flask>=3.1.0",
]

[tool.uv]
package = false
